--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha05'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha05"
     implementation 'io.coil-kt:coil-compose:2.2.2'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
 
     // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
